# geoworkflow

./: .buildinfo  .gitignore  CLAUDE.md  LICENSE  PHASE_2_1_INTEGRATION_INSTRUCTIONS.md  __init__.py  all_remaining_steps.sh  apply_gcs_processor.sh  environment.yml  gcs_batch_implementation_guide.md  genindex.html  index.html  mkdocs.yaml  mkdocs.yml  mkdocs.yml.backup  objects.inv  open_buildings_template.yaml  phase2_1_implementation.sh  py-modindex.html  pydoc-markdown.yaml  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements.txt  search.html  searchindex.js  setup_mkdocs_script.sh  setup_sphinx.sh  test_config.yaml  test_ee.py  test_ee1-2-1.py  test_ee1-2.py  test_phase2_1_config.py
.github/workflows/: docs.yaml  docs.yaml.backup
_modules/: index.html
_modules/geoworkflow/cli/: main.html
_modules/geoworkflow/core/: base.html  constants.html  exceptions.html  pipeline.html
_modules/geoworkflow/schemas/: config_models.html
_sources/: index.rst.txt
_sources/api-reference/: index.rst.txt
_sources/api-reference/_autosummary/: geoworkflow.cli.rst.txt  geoworkflow.core.rst.txt  geoworkflow.schemas.rst.txt
_sources/api_reference/: index.rst.txt
_sources/api_reference/_autosummary/: geoworkflow.cli.rst.txt  geoworkflow.utils.rst.txt
_sources/developer-guide/: contributing.rst.txt  documentation.rst.txt  testing.rst.txt
_sources/developer_guide/: index.rst.txt
_sources/getting_started/: configuration.rst.txt  first-workflow.rst.txt  installation.rst.txt
_sources/getting_started.backup/: index.rst.txt
_sources/user-guide/explanation/: concepts.rst.txt  index.rst.txt  processor-pattern.rst.txt
_sources/user-guide/how-to/: align-datasets.rst.txt  clip-rasters.rst.txt  custom-processors.rst.txt  index.rst.txt  troubleshooting.rst.txt
_static/css/: custom.css
api-reference/: core.html  index.html  processors.html  schemas.html  utils.html
api-reference/_autosummary/: geoworkflow.cli.html  geoworkflow.core.html  geoworkflow.schemas.html
api_reference/: index.html
api_reference/_autosummary/: geoworkflow.cli.html  geoworkflow.core.html  geoworkflow.processors.html  geoworkflow.schemas.html  geoworkflow.utils.html
config/templates/: open_buildings_extraction.yaml
config/visualization/: color_schemes.yaml
developer-guide/: contributing.html  documentation.html  testing.html
developer_guide/: index.html
docs/: API_REFERENCE.md  Makefile  readme.md
docs/api/: .gitignore  Makefile
docs/api/source/: conf.py  index.rst
docs/guide/: gen_ref_pages.py  index.md
docs/guide/assets/: custom.css  directory-tree-container.html
docs/guide/development/: contributing.md  testing.md
docs/guide/getting-started/: installation.md
docs/guide/guide/: concepts.md  structure.md  structure.md.backup  structure.md.backup_fix  workflow.md
docs/optimization_analysis/: 00_README.txt  01_detailed_analysis.md  02_quick_reference.md  03_architecture_diagrams.txt
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
docs/source/api-reference/: processors.rst
docs/source/getting-started/: index.rst  installation.rst
docs/source/getting_started/: quickstart.rst
docs/source/user_guide/: index.rst
docs_backup_20251003_202222/: docs.yaml.bak  mkdocs.yaml.bak
docs_backup_20251003_202222/docs_mkdocs_original/: gen_ref_pages.py
docs_backup_20251003_202222/docs_mkdocs_original/getting-started/: configuration.md  quickstart.md
docs_backup_20251003_202222/docs_mkdocs_original/tutorials/: basic-workflow.md
docs_backup_20251003_202222/docs_original/: readme.md
docs_backup_20251003_202222/docs_original/source/: conf.py
docs_mkdocs/tutorials/: custom-processors.md
examples/: aoi_processor_example.py  enhanced_workflow_example.py
getting_started/: configuration.html  first-workflow.html  index.html  installation.html  quickstart.html
getting_started.backup/: index.html
notebooks/: agglomerations_highways.ipynb  aligning_demo.ipynb  demo_test.ipynb  eebuilding.ipynb  gcs_batch_notebook.ipynb  gcs_example_notebook.ipynb  netcdf_to_geotiff_converter.ipynb  odiac_extraction_demo.ipynb  osm_highways_example.ipynb  pm25_annual_statistics_demo.ipynb  satellite_imagery_demo.ipynb  temporal_averaging_demo.ipynb
notebooks/notebooks/: temps_.ipynb
site/: 404.html  index.html
site/development/contributing/: index.html
site/development/testing/: index.html
site/getting-started/configuration/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guide/concepts/: index.html
site/guide/structure/: index.html
site/guide/workflow/: index.html
site/search/: search_index.json
site/tutorials/basic-workflow/: index.html
site/tutorials/custom-processors/: index.html
src/geoworkflow/: __init__.py  __version__.py
src/geoworkflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/geoworkflow/cli/: __init__.py  cli_structure.py  main.py
src/geoworkflow/core/: __init__.py  base.py  config.py  constants.py  enhanced_base.py  exceptions.py  logging_setup.py  pipeline.py  pipeline_enhancements.py
src/geoworkflow/processors/: __init__.py
src/geoworkflow/schemas/: __init__.py  config_models.py  odiac_config.py  open_buildings_gcs_config.py  (+4 more)
tests/: __init__.py  conftest.py  test_aoi_processor.py  test_stastitical_enrichment.py
user-guide/explanation/: architecture.html  concepts.html  index.html  processor-pattern.html  workflow-stages.html
user-guide/how-to/: align-datasets.html  clip-rasters.html  configuration.html  custom-processors.html  extract-data.html  index.html  troubleshooting.html
user_guide/: index.html
(+56 files in other folders)
